# Rivus

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  deny.toml  riv.md
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
bench/: compare.sh  search.sh
crates/rivus-cli/: Cargo.toml
crates/rivus-cli/src/: main.rs  serve.rs  viz.rs
crates/rivus-cli/tests/: cli.rs
crates/rivus-core/: Cargo.toml
crates/rivus-core/src/: chunk.rs  error.rs  lib.rs  numfmt.rs  numparse.rs  schema.rs  suggest.rs  value.rs
crates/rivus-ir/: Cargo.toml
crates/rivus-ir/src/: expr.rs  graph.rs  lib.rs  schema_prop.rs
crates/rivus-optimizer/: Cargo.toml
crates/rivus-optimizer/src/: lib.rs
crates/rivus-parser/: Cargo.toml
crates/rivus-parser/src/: lexer.rs  lib.rs  literate.rs
crates/rivus-runtime/: Cargo.toml
crates/rivus-runtime/benches/: pipeline.rs
crates/rivus-runtime/src/: analytics.rs  codec.rs  cpu_budget.rs  csv.rs  dict_prop_tests.rs  discovery.rs  distributed.rs  distributed_quic.rs  engine.rs  eval.rs  fxhash.rs  gendata.rs  jsonl.rs  kernel.rs  lib.rs  net.rs  operators.rs  parquet_read.rs  route.rs  telemetry.rs  transport.rs
crates/rivus-runtime/src/operators/: aggregate.rs  join.rs  mod.rs  read.rs  sink.rs  source.rs  subscribe.rs  transform.rs  watch.rs
crates/rivus-runtime/tests/: duckdb_parity.rs  net.rs  observability.rs  optimizer_equiv.rs  quic.rs  stress.rs  transport_bench.rs
crates/rivus-runtime/tests/stress/: bug_specs.rs  byte_identity.rs  decimal.rs  discovery.rs  filesystem.rs  groupby.rs  io_formats.rs  joins.rs  main.rs  null.rs  parallel_read_identity.rs  plan_gate.rs  provenance.rs  read.rs  real_etl.rs  syntax.rs  temporal.rs  transforms.rs  unicode_longpath.rs
docs/: BENCHMARKS.md  GUIDE.ja.md  GUIDE.md  HANDOVER.md  RELEASE.md  ROADMAP.md  SUPPLY-CHAIN.md  TEST-AUDIT.md
docs/design/: 00-north-star.md  01-architecture.md  02-execution-model.md  03-stream-chunk-model.md  04-pipeline-ir.md  05-scheduler.md  06-type-system.md  07-memory-model.md  08-optimization.md  09-jit.md  10-shell-syntax.md  11-runtime-api.md  12-plugin-abi.md  13-error-model.md  14-observability.md  15-benchmark.md  16-mvp-scope.md  17-distributed.md  18-io-formats-and-transports.md  19-interactive-and-shell.md  20-computed-columns.md  21-exact-decimal.md  22-gpu-backend.md  23-datetime-and-reshape.md  24-validation.md  25-syntax-v2.md  26-null-model.md  27-filesystem-io.md  28-io-substrate.md  29-surface-convergence-and-union-views.md  30-windowing.md  31-literate-and-structured.md  32-structured-data-and-schema.md  33-networking-execution.md  34-transport-architecture.md  35-transport-dep-zero-strategy.md  36-sliding-windows-hops.md  37-canonical-reduction-tree.md  38-syntax-simplification.md  40-three-plane-flow.md  (+3 more)
examples/: adults.riv  branch.riv  convert.riv  group.riv  jsonl.riv  literate.riv.md  messy.csv  multiread.riv  net_http.riv  net_subscribe.riv  networking-demo.sh  networking.riv.md  recover.riv  save.riv  users.csv  users.json  users.jsonl
