[package]
name = "rivus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rivus command-line shell: run, explain, and visualize flows"

[[bin]]
name = "rivus"
path = "src/main.rs"

[dependencies]
rivus-core.workspace = true
rivus-ir.workspace = true
rivus-parser.workspace = true
rivus-optimizer.workspace = true
rivus-runtime.workspace = true

# Off-by-default: enable full-regex `regexp()` by forwarding to the runtime's
# `regex` feature. Default `rivus` stays zero-dependency. See SUPPLY-CHAIN.md.
[features]
default = []
regex = ["rivus-runtime/regex"]
gzip = ["rivus-runtime/gzip"]
zstd = ["rivus-runtime/zstd"]
