[package]
name = "rivus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rivus command-line shell: run, explain, and visualize flows"

[[bin]]
name = "rivus"
path = "src/main.rs"

[dependencies]
rivus-core.workspace = true
rivus-ir.workspace = true
rivus-parser.workspace = true
rivus-optimizer.workspace = true
rivus-runtime.workspace = true

# Off-by-default: enable full-regex `regexp()` by forwarding to the runtime's
# `regex` feature. Default `rivus` stays zero-dependency. See SUPPLY-CHAIN.md.
[features]
default = []
regex = ["rivus-runtime/regex"]
gzip = ["rivus-runtime/gzip"]
zstd = ["rivus-runtime/zstd"]
# §28.12 (#149): the unbounded transport skeleton (`watch`). Off by default —
# parse/explain always work; running an unbounded flow needs this feature.
unbounded = ["rivus-runtime/unbounded"]
# The curated full-feature set for distributed binaries (#149 ⑤): the source
# tree's cargo default stays lean (zero-dep), but releases ship fat — Rivus as
# a future compiler can only emit what it embeds. release.yml builds with
# `--features full`; add new ratified features here so distribution follows.
full = ["regex", "gzip", "zstd", "unbounded"]
