[package]
name = "rivus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rivus command-line shell: run, explain, and visualize flows"

[[bin]]
name = "rivus"
path = "src/main.rs"

[dependencies]
rivus-core.workspace = true
rivus-ir.workspace = true
rivus-parser.workspace = true
rivus-optimizer.workspace = true
rivus-runtime.workspace = true

# Off-by-default: enable full-regex `regexp()` by forwarding to the runtime's
# `regex` feature. Default `rivus` stays zero-dependency. See SUPPLY-CHAIN.md.
[features]
# Policy v2: compression on by default (see rivus-runtime).
default = ["gzip", "zstd"]
regex = ["rivus-runtime/regex"]
gzip = ["rivus-runtime/gzip"]
zstd = ["rivus-runtime/zstd"]
# Apache Parquet read (SUPPLY-CHAIN selected adapter). NOT in `full` yet —
# whether the release build ships it is the maintainer's distribution call.
parquet = ["rivus-runtime/parquet"]
# §28.12 (#149): the unbounded transport skeleton (`watch`). Off by default —
# parse/explain always work; running an unbounded flow needs this feature.
unbounded = ["rivus-runtime/unbounded"]
# §33 networking execution (`open "http://…"` / `subscribe "tcp://…"`).
# std-only (no new deps); off by default.
net = ["rivus-runtime/net"]
# The curated full-feature set for distributed binaries (#149 ⑤): the source
# tree's cargo default stays lean (zero-dep), but releases ship fat — Rivus as
# a future compiler can only emit what it embeds. release.yml builds with
# `--features full`; add new ratified features here so distribution follows.
full = ["regex", "gzip", "zstd", "unbounded", "net"]
