[package]
name = "rivus-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rivus runtime: single-thread chunk execution engine, telemetry, modes"

[dependencies]
rivus-core.workspace = true
rivus-ir.workspace = true
# Off-by-default: full-regex `regexp()` predicate. The default build stays
# zero-dependency; opt in with `--features regex`. rust-lang/regex is pure-Rust,
# linear-time (no catastrophic backtracking), MIT/Apache-2.0. See SUPPLY-CHAIN.md.
regex = { version = "1", optional = true }
# Off-by-default: gzip (`.gz`) input. `flate2` with its pure-Rust `miniz_oxide`
# backend (no C toolchain), MIT/Apache-2.0, de-facto standard. See SUPPLY-CHAIN.md.
flate2 = { version = "1", optional = true, default-features = false, features = [
    "rust_backend",
] }
# Off-by-default: zstd (`.zst`) input. `ruzstd` is a pure-Rust zstd *decoder*
# (no C), MIT. Decode-only is all a reader needs; default features (std + the
# pure-Rust `twox-hash` checksum) are all pure-Rust. See SUPPLY-CHAIN.md.
ruzstd = { version = "0.8", optional = true }
# Off-by-default (#149 в‘Ў amended ruling): OS file-change notification for the
# unbounded `watch` discovery вЂ” subscribe to inotify / kqueue / FSEvents /
# ReadDirectoryChangesW instead of polling (std polling rejected: needless OS
# load). `notify` is the de-facto standard (notify-rs), latest stable line,
# CC0-1.0. `macos_fsevent` (its only default feature) kept explicitly so macOS
# uses FSEvents, not one-fd-per-file kqueue. See SUPPLY-CHAIN.md.
notify = { version = "8.2", optional = true, default-features = false, features = [
    "macos_fsevent",
] }
# Off-by-default (В§33 / В§28.12.5-3): the QUIC protected-channel transport вЂ” the
# feature-gated *alternative* to riding kernel WireGuard. `quinn` (pure-Rust
# QUIC, rustls with the pure-Rust-ish `ring` provider), `rcgen` to mint the
# static self-signed identity cert, `tokio` current-thread runtime bridged to the
# sync engine. Identity = the cert's public key (SPKI/DER fingerprint); the
# allowlist pins allowed peer fingerprints. All isolated behind `quic`; the
# default and `net` builds never compile or link it. See SUPPLY-CHAIN.md.
quinn = { version = "0.11", optional = true, default-features = false, features = [
    "runtime-tokio",
    "rustls-ring",
] }
rustls = { version = "0.23", optional = true, default-features = false, features = [
    "ring",
    "std",
] }
rcgen = { version = "0.13", optional = true, default-features = false, features = [
    "ring",
] }
tokio = { version = "1", optional = true, default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "net",
    "io-util",
    "sync",
    "time",
] }
# SHA-256 for the static-key identity / peer pin (already in the `quic` tree via
# rustls-ring; used directly for the cert-DER fingerprint).
ring = { version = "0.17", optional = true }

[features]
default = []
regex = ["dep:regex"]
gzip = ["dep:flate2"]
zstd = ["dep:ruzstd"]
# #149 в‘¤: unbounded transport skeleton (watch). parse/to_source stay always-std;
# only evaluation needs this feature; feature-off runs refuse pre-run (В§28.12).
unbounded = ["dep:notify"]
# В§33 networking execution: `open "http://вЂ¦"` (bounded HTTP GET) and
# `subscribe "tcp://вЂ¦"` (unbounded TCP client stream). std-only (a minimal
# HTTP/1.1 client over `std::net`) вЂ” zero third-party deps. parse/to_source stay
# always-std; only evaluation needs this feature; feature-off runs refuse
# pre-run (the `regex`/`gzip`/`unbounded` shape, В§28.12 / В§33).
net = []
# В§28.12.5-3: QUIC transport as the feature-gated alternative to kernel
# WireGuard. Implies `net` (shares the distributed protocol/capability). Heavy
# deps (tokio/quinn/rustls/ring) вЂ” off by default; the lean and `net` builds stay
# free of it. Distribution (`full`) opts in.
quic = ["net", "dep:quinn", "dep:rustls", "dep:rcgen", "dep:tokio", "dep:ring"]

[dev-dependencies]
rivus-parser.workspace = true
rivus-optimizer.workspace = true
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
# Test-only: write `.zst` fixtures for the zstd-decode oracle. Encode-side only,
# never shipped (dev-dependency). The runtime decodes with pure-Rust `ruzstd`.
zstd = "0.13"

[[bench]]
name = "pipeline"
harness = false
