[package]
name = "rivus-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rivus runtime: single-thread chunk execution engine, telemetry, modes"

[dependencies]
rivus-core.workspace = true
rivus-ir.workspace = true
# Off-by-default: full-regex `regexp()` predicate. The default build stays
# zero-dependency; opt in with `--features regex`. rust-lang/regex is pure-Rust,
# linear-time (no catastrophic backtracking), MIT/Apache-2.0. See SUPPLY-CHAIN.md.
regex = { version = "1", optional = true }
# Off-by-default: gzip (`.gz`) input. `flate2` with its pure-Rust `miniz_oxide`
# backend (no C toolchain), MIT/Apache-2.0, de-facto standard. See SUPPLY-CHAIN.md.
flate2 = { version = "1", optional = true, default-features = false, features = [
    "rust_backend",
] }
# Off-by-default: zstd (`.zst`) input. `ruzstd` is a pure-Rust zstd *decoder*
# (no C), MIT. Decode-only is all a reader needs; default features (std + the
# pure-Rust `twox-hash` checksum) are all pure-Rust. See SUPPLY-CHAIN.md.
ruzstd = { version = "0.8", optional = true }
# Off-by-default (#149 ② amended ruling): OS file-change notification for the
# unbounded `watch` discovery — subscribe to inotify / kqueue / FSEvents /
# ReadDirectoryChangesW instead of polling (std polling rejected: needless OS
# load). `notify` is the de-facto standard (notify-rs), latest stable line,
# CC0-1.0. `macos_fsevent` (its only default feature) kept explicitly so macOS
# uses FSEvents, not one-fd-per-file kqueue. See SUPPLY-CHAIN.md.
notify = { version = "8.2", optional = true, default-features = false, features = [
    "macos_fsevent",
] }
# Off-by-default: Apache Parquet input (read-only slice). The official
# apache/arrow-rs `parquet` crate **without the arrow feature** — the row/
# column API only, which keeps the transitive tree at 30 pure-Rust crates
# (measured via `cargo tree`; no C build step anywhere). Codecs: uncompressed + snappy (`snap`, the
# de-facto writer default) + gzip via the same pure-Rust `flate2` backend the
# `gzip` feature already vets. See SUPPLY-CHAIN.md (selected adapter).
parquet = { version = "59", optional = true, default-features = false, features = [
    "snap",
    "flate2",
    "flate2-rust_backened",
] }

[features]
# Policy v2 (統括指示 2026-07-09): compressed streams are first-class — the
# single-binary release reads .gz/.zst by default (pure-Rust decoders, vetted
# in SUPPLY-CHAIN.md). Other adapters stay opt-in for now.
default = ["gzip", "zstd"]
regex = ["dep:regex"]
gzip = ["dep:flate2"]
zstd = ["dep:ruzstd"]
# #149 ⑤: unbounded transport skeleton (watch). parse/to_source stay always-std;
# only evaluation needs this feature; feature-off runs refuse pre-run (§28.12).
unbounded = ["dep:notify"]
parquet = ["dep:parquet"]
# §33 networking execution: `open "http://…"` (bounded HTTP GET) and
# `subscribe "tcp://…"` (unbounded TCP client feed). **std-only — zero
# third-party deps** (a minimal HTTP/1.1 client over `std::net`). parse/
# to_source stay always-std; only evaluation needs it; feature-off runs
# refuse pre-run (§28.12 / §33). (QUIC is the off-by-default alt, a later slice.)
net = []

[dev-dependencies]
rivus-parser.workspace = true
rivus-optimizer.workspace = true
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
# Test-only: write `.zst` fixtures for the zstd-decode oracle. Encode-side only,
# never shipped (dev-dependency). The runtime decodes with pure-Rust `ruzstd`.
zstd = "0.13"

[[bench]]
name = "pipeline"
harness = false
